PinchHandler: Set target properties only if respective axis enabled

If the user has disabled the rotation or scale axis, the target item's
rotation or scale property must not be set at all, to avoid breaking
bindings that were set differently.

Fixes: QTBUG-130517
Change-Id: I8f84f6845532f748bbdcc3af91a398d6659156ca
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 49fbf2f86afa62b8c1c2be330620a0b310584a34)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 6c9123f0933f476a2fd4a8bf4b9c01b36ff56d0f)